mesa (10.3.0~rc3-2) UNRELEASED; urgency=medium

  * Add 01_gallium-util-add-missing-u_debug-include.patch, fixes FTBFS on
    big endian archs.

 -- Andreas Boll <andreas.boll.dev@gmail.com>  Fri, 12 Sep 2014 10:34:19 +0200

mesa (10.3.0~rc3-1) experimental; urgency=medium

  [ Maarten Lankhorst ]
  * Build with llvm 3.5.
  * New upstream release.
  * Remove mention of tdfx.

  [ Timo Aaltonen ]
  * mesa-common-dev: Add glcorearb.h.
  * not-installed: Skip libglapi.so.

 -- Maarten Lankhorst <maarten.lankhorst@ubuntu.com>  Mon, 08 Sep 2014 15:50:42 +0200

mesa (10.2.5-1) unstable; urgency=medium

  [ Andreas Boll ]
  * New upstream release.
    - nv50: fix build failure on m68k due to invalid struct alignment
      assumptions (Closes: #728053).
    - i915: Fix up intelInitScreen2 for DRI3 (Closes: #754297).

  [ Matthias Klose ]
  * Add patch to fix FTBFS on x32. (Closes: #757703)
    - x32-updates.patch

  [ Maarten Lankhorst ]
  * Enable support for freedreno.

 -- Maarten Lankhorst <maarten.lankhorst@ubuntu.com>  Mon, 11 Aug 2014 13:34:58 +0200

mesa (10.2.4-1) unstable; urgency=medium

  * New upstream release.

 -- Julien Cristau <jcristau@debian.org>  Sun, 20 Jul 2014 10:20:05 +0200

mesa (10.2.3-1) unstable; urgency=low

  [ Maarten Lankhorst ]
  * New upstream release.

  [ Julien Cristau ]
  * Add debian/upstream/signing-key.asc, and add pgpsigurlmangle option to
    debian/watch so uscan can check signatures on release tarballs.

 -- Julien Cristau <jcristau@debian.org>  Wed, 09 Jul 2014 19:39:06 +0200

mesa (10.2.2-1) unstable; urgency=medium

  [ Andreas Boll ]
  * New upstream release.
    - glx: Don't crash on swap event for a Window (non-GLXWindow)
      (Closes: #685328).
    - 01_targets-xa-limit-the-amount-of-exported-symbols.diff dropped,
      upstream
  * Cherry-pick commit b4dcf87 (glxext: Send the Drawable's ID in the
    GLX_BufferSwapComplete event) from upstream, fixes intel + dri3.
