@@ -78,16 +78,15 @@ else
 
 	# svga needs xa state tracker
 	confflags_GALLIUM += --enable-xa
-#
-# Although the KMS egl drivers will probably build on kfreebsd & hurd
-# only linux actually has KMS drivers implemented at this point.
-	EGL_DISPLAYS += drm
+
 # Non-Linux ports also lack *_CLOEXEC and epoll, so wayland isn't ready yet:
 	EGL_DISPLAYS += wayland
     ifeq (,$(filter $(DEB_HOST_ARCH), s390 s390x))
 	DRI_DRIVERS += nouveau
     endif
   endif
+
+	EGL_DISPLAYS += drm
 
   # Build intel drivers on archs where libdrm-intel is installed
   ifneq (,$(filter $(DEB_HOST_ARCH),amd64 i386 kfreebsd-amd64 kfreebsd-i386 x32))
